fixed invisible horizontal scrollbar in hero sheet

--- a/src/App/Views/Sheets/Sheets.scss
+++ b/src/App/Views/Sheets/Sheets.scss
@@ -26,7 +26,7 @@ table {
 .sheet-wrapper {
   display: flex;
 
-  &:not(:first-child) {
+  &:not(:first-child):not(.scroll) {
     margin-top: 24px;
   }
 
